syntax = "proto3";
package lubtd.ibclab.spn;

// this line is used by starport scaffolding # genesis/proto/import
import "spn/testnetState.proto";

option go_package = "github.com/lubtd/ibclab/x/spn/types";

// GenesisState defines the spn module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
		repeated TestnetState testnetStateList = 2; // this line is used by starport scaffolding # genesis/proto/stateField
    string port_id = 1; // this line is used by starport scaffolding # genesis/proto/stateField
}
